fixed mobile view overflow

--- a/public/styles/styles.css
+++ b/public/styles/styles.css
@@ -1,11 +1,8 @@
-html {
+html, body {
     scroll-behavior: smooth;
-    overflow: hidden;
-}
-
-* {
     overflow-x: hidden;
 }
+
 
 .c-item {
     height: 480px;
